// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: (header) should compile template with breadcrumbs and without title 1`] = `
"[breadcrumbs]

## Table of contents

### Enumeration members

- [Down](../enums/EnumReflection.md#down)
- [Left](../enums/EnumReflection.md#left)
- [Right](../enums/EnumReflection.md#right)
- [Up](../enums/EnumReflection.md#up)

[groups]
"
`;

exports[`Reflections: (template) should compile Enum 1`] = `
"# Enumeration: EnumReflection

## Table of contents

### Enumeration members

- [Down](../enums/EnumReflection.md#down)
- [Left](../enums/EnumReflection.md#left)
- [Right](../enums/EnumReflection.md#right)
- [Up](../enums/EnumReflection.md#up)

[groups]
"
`;

exports[`Reflections: (template) should compile a callable reflection 1`] = `
"# Interface: CallableReflection

## Callable

### CallableReflection

[signature]
"
`;

exports[`Reflections: (template) should compile an indexable reflection 1`] = `
"# Interface: IndexableReflection

## Indexable

▪ [index: \`number\`]: \`string\`
"
`;

exports[`Reflections: (template) should compile implemented class 1`] = `
"# Class: ImplementedClass

## Implements

- [\`ReflectionClass\`](../classes/ReflectionClass.md)

## Table of contents

### Constructors

- [constructor](../classes/ImplementedClass.md#constructor)

[groups]
"
`;

exports[`Reflections: (template) should compile module with breadcrumbs and project title 1`] = `
"# Enumeration: EnumReflection

## Table of contents

### Enumeration members

- [Down](../enums/EnumReflection.md#down)
- [Left](../enums/EnumReflection.md#left)
- [Right](../enums/EnumReflection.md#right)
- [Up](../enums/EnumReflection.md#up)

[groups]
"
`;
